[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "akashimedia"
version = "0.1.0"
description = "AkashiMedia — Фаза 1 MVP: transit gateway for Instagram/LinkedIn publishing with AI repackaging"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --cov=src --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/entrypoints/web/server.py"]
