[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "akashimedia"
version = "0.1.0"
description = "AkashiMedia — Фаза 1 MVP: transit gateway for Instagram/LinkedIn publishing with AI repackaging"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "itsdangerous==2.2.0",
    "httpx==0.28.1",
    "openai==1.59.6",
    "python-dotenv>=1.2.2",
    "aiogram==3.29.1",
    "sqlalchemy>=2.0.51",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --cov=src --cov-report=term-missing"
markers = ["live: opt-in tests that hit real external APIs (skipped without credentials)"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/entrypoints/web/server.py"]
